<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="tv_stat_item">对比项目：</string>
    <string name="tv_stat_period">统计时间段：</string>
    <string name="tv_stat_type">统计方式：</string>
    <string name="tv_stat_scope">统计范围：</string>
    <string name="tv_stat_begin_date">开始时间：</string>
    <string name="tv_stat_end_date">结束时间：</string>
    <string name="tv_inspect_type">检查类别：</string>
    <string name="hello">Hello World, InspectActivity!</string>
    <string name="app_name">沈阳市工商局巡检系统</string>
    <string name="tv_home_task">任务管理</string>
    <string name="tv_home_map">地图浏览</string>
    <string name="tv_home_call">网内呼叫</string>
    <string name="tv_home_talk">集群对讲</string>
    <string name="tv_home_inspect">巡检记录</string>
    <string name="tv_home_search">信息查询</string>
    <string name="tv_home_knowledge">系统知识库</string>
    <string name="tv_home_notice">系统公告</string>
    <string name="tv_home_stat">统计管理</string>
    <string name="tv_home_help">使用帮助</string>
    <string name="tv_home_more">更多</string>
    <string name="tv_title_home">首页</string>
    <string name="tv_title_task_list">任务列表</string>
    <string name="tv_title_task_detail">任务详情</string>
    <string name="tv_title_notice_list">公告列表</string>
    <string name="tv_title_notice_detail">公告详情</string>
    <string name="tv_title_help">使用帮助</string>
    <string name="tv_title_call">网内呼叫</string>
    <string name="tv_title_talk">集群对讲</string>
    <string name="tv_title_more">更多</string>
    <string name="tv_title_knowledge_type">知识类型</string>
    <string name="tv_title_knowledge_list">知识列表</string>
    <string name="tv_title_knowledge_detail">知识详情</string>
    <string name="tv_title_knowledge_search">知识检索</string>
    <string name="tv_title_stat_set">统计设置</string>
    <string name="tv_title_stat_result">统计结果</string>
    <string name="tv_title_search_info">信息查询</string>
    <string name="tv_title_search_result">查询结果</string>
    <string name="tv_title_mark">企业位置标记</string>
    <string name="tv_title_inspect_list">巡查历史</string>
    <string name="tv_title_case_list">案件信息</string>
    <string name="tv_title_case_detail">案件详情</string>
    <string name="tv_title_inspect_detail">巡查详情</string>
    <string name="tv_title_inspect_input">巡检情况录入</string>
    <string name="tv_title_inspect_finish">巡检完成</string>
    <string name="tv_title_floorplan">企业平面图</string>
    <string name="tv_title_table_input">巡检表格录入</string>
    <string name="tv_title_select">请选择人员</string>
    <string name="tv_login_username">用户名：</string>
    <string name="tv_login_password">密　码：</string>
    <string name="tv_company_code">企业注册号：</string>
    <string name="tv_company_name">企业名称：</string>
    <string name="tv_company_person">企业负责人：</string>
    <string name="tv_company_type">企业类型：</string>
    <string name="tv_company_phone">联系电话：</string>
    <string name="tv_company_card">身份证号：</string>
    <string name="tv_company_address">企业地址：</string>
    <string name="tv_company_scope">经营范围：</string>
    <string name="tv_company_longitude">经度：</string>
    <string name="tv_company_latitude">维度：</string>
    <string name="tv_inspect_person">检查人员：</string>
    <string name="tv_inspect_remark">备注：</string>
    <string name="tv_inspect_result">检查结果：</string>
    <string name="tv_server_url">服务器地址：</string>
    <string name="tv_table_list">已录入巡检表格：</string>
    <string name="tv_no_data">暂无记录</string>
    <string name="tv_more_about">关于</string>
    <string name="tv_more_update">检查更新</string>
    <string name="tv_more_feedback">意见反馈</string>
    <string name="tv_knowledge_type">知识类型：</string>
    <string name="tv_key">关键字：</string>
    <string name="btn_login">登陆</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_stat">开始统计</string>
    <string name="btn_search">查询</string>
    <string name="btn_mark">标记</string>
    <string name="btn_inspect_input">录入巡检信息</string>
    <string name="btn_inspect_more">更多操作</string>
    <string name="btn_next">下一步</string>
    <string name="btn_finish">完成</string>
    <string name="btn_execute">执行任务</string>
    <string name="btn_add_table">添加巡检表格</string>
    <string name="btn_submit">提交</string>
    <string name="btn_talk_start">点击开始对讲</string>
    <string name="btn_talk_end">点击结束对讲并发送</string>
    <string name="btn_auto_save">记住密码</string>
    <string name="btn_talk">会话</string>
    <string name="btn_select">选择</string>
    <string name="hint_login_username">请输入用户名</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_title">请输入标题</string>
    <string name="hint_feedback">请输入您的反馈信息</string>
    <string name="msg_loading">加载中,请稍候...</string>
    <string name="msg_logining">登陆中,请稍候...</string>
    <string name="msg_username_input">请输入用户名</string>
    <string name="msg_password_input">请输入密码</string>
    <string name="msg_login_failure">登陆失败,用户名或密码错误</string>
    <string name="msg_exit">确定退出企业监管巡查系统吗？</string>
    <string name="msg_about">企业监管巡查系统可以监管到每个巡检人员位置情况和工作情况；通过给巡检人员配备智能巡检终端，简化巡检流程，提高巡检效率，减少巡检工作量,减少纸质存档成本和人员管理成本，减少整改企业复检遗漏。</string>
    <string name="msg_is_newest">当前已经是最新版本</string>
    <string name="msg_feedback_ok">反馈已提交，感谢您的参与</string>
    <string name="msg_title_input">请输入标题</string>
    <string name="msg_content_input">请输入内容</string>
    <string name="msg_get_location">正在获取位置信息,请稍候...</string>
    <string name="msg_sending_request">正在发送请求</string>
    <string name="msg_no_more">没有更多数据</string>
    <string name="menu_call_phone">拨打办公电话</string>
    <string name="menu_call_mobile">拨打手机</string>
    <string name="menu_call_title">请选择操作</string>
    <string name="menu_search_title">请选择操作</string>
    <string name="menu_company_path">规划路线</string>
    <string name="menu_company_inspect">巡查历史</string>
    <string name="menu_company_case">案件信息</string>
    <string name="menu_company_mark">标记位置</string>
    <string name="menu_company_floorplan">查看平面图</string>
    <string name="menu_inspect_photo">拍照</string>
    <string name="menu_inspect_video">录像</string>
    <string name="menu_set">设置</string>
    <string name="menu_select_table">请选择要录入的巡检表格</string>
    <string name="menu_exit">退出</string>
    <string name="menu_home">首页</string>
     <string name="time_task">有快过期的任务，请点击查看！</string>
</resources>
